infra/k8s/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka
      containers:
        - env:
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper-srv:2181
            - name: KAFKA_LISTENERS
              value: PLAINTEXT://kafka:9092
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka-srv:9092
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
          image: bitnami/kafka:latest
          imagePullPolicy: IfNotPresent
          name: kafka
          ports:
            - containerPort: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-srv
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      protocol: TCP
      port: 9092
      targetPort: 9092
