infra/k8s/test-kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-kafka-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-kafka
  template:
    metadata:
      labels:
        app: test-kafka
    spec:
      containers:
        - name: test-kafka
          image: mkd/test-kafka:latest
---
apiVersion: v1
kind: Service
metadata:
  name: test-kafka-srv
spec:
  selector:
    app: test-kafka
  ports:
    - name: test-kafka
      protocol: TCP
      port: 3000
      targetPort: 3000
